--- a/index.html
+++ b/index.html
@@ -5,7 +5,50 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/fav-icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dezh</title>
+  <meta name="author" content="Dezh team">
+  <meta name="creator" content="Dezh team">
+  <meta name="publisher" content="Dezh team">
+  <link rel="canonical" href="https://dezh.tech/">
+  <link rel="alternate" hreflang="en-US" href="https://dezh.tech">
+  <meta name="keywords" content="Account, Blockchain Explore, Public vs. Private Blockchain, Wallet, WEI, Validator, Transaction,
+    Tokenomics, Testnet, Smart Contract, Sender, Oracles, Nonce, Node, Mining, Mainnet, IPFS CIDv2, IPFS, IPFS CIDv1,
+    Immutable Tokens, Immutable Ledger, GWEI, Gas Price, Gas Limit, Fork, Faucet, EVM, ERC, Decentralization, DApp,
+    Cryptocurrency, Consensus Mechanism, Pactus,
+    Zurvan Labs" />
+  <title>Dezh | Building the future of decentralized generation of WEB</title>
+  <meta name="description"
+    content="At Dezh Technologies, we are building tools, apps, services and infrastructure that make decentralized web happens." />
+  <meta property="og:description"
+    content="At Dezh Technologies, we are building tools, apps, services and infrastructure that make decentralized web happens." />
+  <meta property="og:title" content="Dezh | Building the future of decentralized generation of WEB" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://dezh.tech" />
+  <meta property="og:image" content="/public/openGraph-image.png" />
+  <meta property="og:image:secure_url" content="/public/openGraph-image.png">
+  <meta property="og:site_name" content="Dezh Technologies">
+  <meta property="og:image:height" content="2160">
+  <meta property="og:image:width" content="4116">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:alt" content="Dezh Technologies">
+  <meta property="og:locale" content="en_US">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:title" content="Dezh | Building the future of decentralized generation of WEB" />
+  <meta property="twitter:description"
+    content="At Dezh Technologies, we are building tools, apps, services and infrastructure that make decentralized web happens." />
+  <meta property="twitter:image" content="/public/openGraph-image.png" />
+  <meta property="twitter:image:secure_url" content="/public/openGraph-image.png">
+  <meta property="twitter:site_name" content="Dezh Technologies">
+  <meta property="twitter:image:height" content="2160">
+  <meta property="twitter:image:width" content="4116">
+  <meta property="twitter:image:type" content="image/png">
+  <meta property="twitter:image:alt" content="Dezh Technologies">
+  <link rel="mask-icon" href="/fav-icon.svg" color="#FF4800">
+  <link rel="apple-touch-icon" sizes="40x40" href="/fav.png">
+  <meta content="telephone=no" name="format-detection">
+  <link rel="author" href="hi@dezh.tech">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="robots"
+    content="index, follow, max-video-preview:max-video-preview:-1, max-image-preview:max-image-preview:large, max-snippet:max-snippet:-1">
 </head>
 
 <body>
