--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <meta property="og:title" content="Dezh | Building the future of decentralized generation of WEB" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://dezh.tech" />
-  <meta property="og:image" content="/public/openGraph-image.png" />
-  <meta property="og:image:secure_url" content="/public/openGraph-image.png">
+  <meta property="og:image" content="https://dezh.tech/openGraph-image.png" />
+  <meta property="og:image:secure_url" content="https://dezh.tech/openGraph-image.png">
   <meta property="og:site_name" content="Dezh Technologies">
   <meta property="og:image:height" content="2160">
   <meta property="og:image:width" content="4116">
@@ -35,8 +35,8 @@
   <meta property="twitter:title" content="Dezh | Building the future of decentralized generation of WEB" />
   <meta property="twitter:description"
     content="At Dezh Technologies, we are building tools, apps, services and infrastructure that make decentralized web happens." />
-  <meta property="twitter:image" content="/public/openGraph-image.png" />
-  <meta property="twitter:image:secure_url" content="/public/openGraph-image.png">
+  <meta property="twitter:image" content="https://dezh.tech/openGraph-image.png" />
+  <meta property="twitter:image:secure_url" content="https://dezh.tech/openGraph-image.png">
   <meta property="twitter:site_name" content="Dezh Technologies">
   <meta property="twitter:image:height" content="2160">
   <meta property="twitter:image:width" content="4116">
