--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://dezh.tech" />
   <meta property="og:image" content="https://dezh.tech/openGraph-image.webp" />
-  <meta property="og:image:secure_url" content="https://dezh.tech/openGraph-image.">
+  <meta property="og:image:secure_url" content="https://dezh.tech/openGraph-image.webp">
   <meta property="og:site_name" content="Dezh Technologies">
   <meta property="og:image:height" content="2160">
   <meta property="og:image:width" content="4116">
