feat: add new meta tag

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     Cryptocurrency, Consensus Mechanism, Pactus,
     Zurvan Labs" />
   <title>Dezh | Building the future of decentralized generation of WEB</title>
+  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
   <meta name="description"
     content="At Dezh Technologies, we are building tools, apps, services and infrastructure that make decentralized web happens." />
   <meta property="og:description"
@@ -24,7 +25,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://dezh.tech" />
   <meta property="og:image" content="https://dezh.tech/openGraph-image.webp" />
-  <meta property="og:image:secure_url" content="https://dezh.tech/openGraph-image.">
+  <meta property="og:image:secure_url" content="https://dezh.tech/openGraph-image.webp">
   <meta property="og:site_name" content="Dezh Technologies">
   <meta property="og:image:height" content="2160">
   <meta property="og:image:width" content="4116">
