fix: update og url and add new meta tag (#33)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     Cryptocurrency, Consensus Mechanism, Pactus,
     Zurvan Labs" />
   <title>Dezh | Building the future of decentralized generation of WEB</title>
+  <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
   <meta name="description"
     content="At Dezh Technologies, we are building tools, apps, services and infrastructure that make decentralized web happens." />
   <meta property="og:description"
