--- a/index.html
+++ b/index.html
@@ -10,22 +10,20 @@
   <meta name="publisher" content="Dezh team">
   <link rel="canonical" href="https://dezh.tech/">
   <link rel="alternate" hreflang="en-US" href="https://dezh.tech">
-  <meta name="keywords" content="Account, Blockchain Explore, Public vs. Private Blockchain, Wallet, WEI, Validator, Transaction,
-    Tokenomics, Testnet, Smart Contract, Sender, Oracles, Nonce, Node, Mining, Mainnet, IPFS CIDv2, IPFS, IPFS CIDv1,
-    Immutable Tokens, Immutable Ledger, GWEI, Gas Price, Gas Limit, Fork, Faucet, EVM, ERC, Decentralization, DApp,
-    Cryptocurrency, Consensus Mechanism, Pactus,
-    Zurvan Labs" />
-  <title>Dezh | Building the future of decentralized generation of WEB</title>
+  <meta name="keywords" content="Dezh, Web, Nostr, Notes and other stuff, Bitcoin, Blockchain, Freedom, Technology, Decentralized, Transaction" />
+  <title>Dezh Technologies</title>
   <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
   <meta name="description"
-    content="At Dezh Technologies, we are building tools, apps, services and infrastructure that make decentralized web happens." />
+    content="At Dezh Technologies, we are building tools, apps, services and infrastructures
+    that makes a decentralized and open society happen." />
   <meta property="og:description"
-    content="At Dezh Technologies, we are building tools, apps, services and infrastructure that make decentralized web happens." />
-  <meta property="og:title" content="Dezh | Building the future of decentralized generation of WEB" />
+    content="At Dezh Technologies, we are building tools, apps, services and infrastructures
+    that makes a decentralized and open society happen." />
+  <meta property="og:title" content="Dezh" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://dezh.tech" />
-  <meta property="og:image" content="https://dezh.tech/openGraph-image.webp" />
-  <meta property="og:image:secure_url" content="https://dezh.tech/openGraph-image.webp">
+  <meta property="og:image" content="https://dezh.tech/og.svg" />
+  <meta property="og:image:secure_url" content="https://dezh.tech/og.svg">
   <meta property="og:site_name" content="Dezh Technologies">
   <meta property="og:image:height" content="2160">
   <meta property="og:image:width" content="4116">
@@ -33,11 +31,12 @@
   <meta property="og:image:alt" content="Dezh Technologies">
   <meta property="og:locale" content="en_US">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:title" content="Dezh | Building the future of decentralized generation of WEB" />
+  <meta property="twitter:title" content="Dezh" />
   <meta property="twitter:description"
-    content="At Dezh Technologies, we are building tools, apps, services and infrastructure that make decentralized web happens." />
-  <meta property="twitter:image" content="https://dezh.tech/openGraph-image.webp" />
-  <meta property="twitter:image:secure_url" content="https://dezh.tech/openGraph-image.webp">
+    content="At Dezh Technologies, we are building tools, apps, services and infrastructures
+    that makes a decentralized and open society happen." />
+  <meta property="twitter:image" content="https://dezh.tech/og.svg" />
+  <meta property="twitter:image:secure_url" content="https://dezh.tech/og.svg">
   <meta property="twitter:site_name" content="Dezh Technologies">
   <meta property="twitter:image:height" content="2160">
   <meta property="twitter:image:width" content="4116">
